# ProteoMeter

./: .buildinfo  .gitignore  CONTRIBUTING.md  Disclaimer Notice.md  HISTORY.md  LICENSE  README.md  demonstration.ipynb  demonstration.py  genindex.html  index.html  mkdocs.yml  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  repo.sh  search.html  searchindex.js  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: dev.yaml  dev.yml  main.yaml  release.yml
_sources/autoapi/: index.rst.txt
_sources/autoapi/proteometer/: index.rst.txt
_sources/autoapi/proteometer/abundance/: index.rst.txt
_sources/autoapi/proteometer/alignment/: index.rst.txt
_sources/autoapi/proteometer/barcode/: index.rst.txt
_sources/autoapi/proteometer/fasta/: index.rst.txt
_sources/autoapi/proteometer/lip/: index.rst.txt
_sources/autoapi/proteometer/lip_analysis/: index.rst.txt
_sources/autoapi/proteometer/normalization/: index.rst.txt
_sources/autoapi/proteometer/params/: index.rst.txt
_sources/autoapi/proteometer/parse_metadata/: index.rst.txt
_sources/autoapi/proteometer/peptide/: index.rst.txt
_sources/autoapi/proteometer/ptm/: index.rst.txt
_sources/autoapi/proteometer/ptm_analysis/: index.rst.txt
_sources/autoapi/proteometer/quality_control_plots/: index.rst.txt
_sources/autoapi/proteometer/residue/: index.rst.txt
_sources/autoapi/proteometer/rollup/: index.rst.txt
_sources/autoapi/proteometer/stats/: index.rst.txt
_sources/autoapi/proteometer/utils/: index.rst.txt
autoapi/: index.html
autoapi/proteometer/: index.html
autoapi/proteometer/abundance/: index.html
autoapi/proteometer/alignment/: index.html
autoapi/proteometer/barcode/: index.html
autoapi/proteometer/fasta/: index.html
autoapi/proteometer/lip/: index.html
autoapi/proteometer/lip_analysis/: index.html
autoapi/proteometer/normalization/: index.html
autoapi/proteometer/params/: index.html
autoapi/proteometer/parse_metadata/: index.html
autoapi/proteometer/peptide/: index.html
autoapi/proteometer/ptm/: index.html
autoapi/proteometer/ptm_analysis/: index.html
autoapi/proteometer/quality_control_plots/: index.html
autoapi/proteometer/residue/: index.html
autoapi/proteometer/rollup/: index.html
autoapi/proteometer/stats/: index.html
autoapi/proteometer/utils/: index.html
demo_data/: lip.toml  lip_processed_prot.csv  ptm.toml
demo_data/LiP/: trypsin_prot.tsv
demo_data/PTM/: global_prot.tsv
docs/: api.md  conf.py  index.rst  installation.md  usage.md
examples/: LiP.qmd
examples/HCoV229E_MRC5/: LiP.qmd  PTM.qmd  utils.py
examples/HCoV229E_MRC5/data/LiP/: double_prot.tsv  metadata.tsv  trypsin_prot.tsv
examples/HCoV229E_MRC5/data/PTM/: acetyl_pept.tsv  metadata.tsv
examples/HCoV229E_MRC5/test_data/LiP/: trypsin_prot.tsv
examples/data/: list of samples for virus PPI.xlsx
examples/data/P1T1/Crona/LiP/: README.md
proteometer/: Proteome.py  __init__.py  cli.py
src/proteometer/: Proteome.py  __init__.py  _proteome.py  abundance.py  alignment.py  barcode.py  fasta.py  lip.py  lip_analysis.py  normalization.py  params.py  parse_metadata.py  peptide.py  ptm.py  ptm_analysis.py  quality_control_plots.py  residue.py  rollup.py  stats.py  test_ptm_analysis.py  utils.py
tests/: __init__.py  test_abundance.py  test_app.py  test_config_lip.ini  test_config_ptm.ini  test_config_ptm.toml  test_install.py  test_lip.py  test_normalization.py  test_ptm.py  test_residue.py  test_rollup.py  test_stats.py
tests/data/: test_config_lip.toml  test_config_ptm.toml
tests/data/LiP/: double_pept.tsv  metadata.tsv  trypsin_pept.tsv  trypsin_prot.tsv
tests/data/PTM/: acetyl_pept.txt  global_pept.tsv  global_prot.tsv  phospho_pept.tsv  redox_pept.tsv
