[project]
authors = [
    { name = "Song Feng", email = "song.feng@pnnl.gov" },
    { name = "Jordan Rozum", email = "jordan.rozum@pnnl.gov" },
]
description = "Add a short description here"
name = "proteometer"
requires-python = ">= 3.12, <3.13"
version = "0.1.0"
dependencies = [
    "numpy>=2.2.1,<3",
    "pandas>=2.2.3,<3",
    "scipy>=1.14.1,<2",
    "statsmodels>=0.14.4,<0.15",
    "biopython>=1.84,<2",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64", "win-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
proteometer = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.12.5,<3.13"

[dependency-groups]
dev = ["ruff", "pandas-stubs"]
test = ["pytest"]

[tool.pixi.environments]
default = { features = ["dev", "test"] }
test = { features = ["test"] }

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"
