[project]
authors = [
    { name = "Song Feng", email = "song.feng@pnnl.gov" },
    { name = "Jordan Rozum", email = "jordan.rozum@pnnl.gov" },
]
description = "Add a short description here"
name = "proteometer"
requires-python = ">= 3.12, <3.13"
version = "0.1.0"
dependencies = [
    "numpy>=2.2.1,<3",
    "pandas>=2.2.3,<3",
    "scipy>=1.14.1,<2",
    "statsmodels>=0.14.4,<0.15",
    "biopython>=1.84,<2", "matplotlib>=3.10.1,<4",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["osx-64", "osx-arm64", "linux-64", "win-64", "linux-aarch64"]

[tool.pixi.pypi-dependencies]
proteometer = { path = ".", editable = true }

[tool.pixi.tasks]
test = { cmd = "pytest tests" }
doctest = { cmd = "python -m doctest src/proteometer/*.py" }
lint = { cmd = "ruff check src tests" }
typecheck = { cmd = "pyright src tests" }
doc = { cmd = "sphinx-build -M html docs docs/_build" }

[tool.pixi.dependencies]
python = ">=3.12.5,<3.13"

[dependency-groups]
dev = ["pandas-stubs"]
test = ["pytest"]
lint = ["ruff", "pyright>=1.1.391,<2"]
docs = [
    "sphinx",
    "sphinx-toolbox",
    "pydata-sphinx-theme",
    "sphinx-copybutton",
    "sphinx-autoapi",
]

[tool.pixi.environments]
default = { features = ["dev", "test", "lint"] }
test = { features = ["test"] }
docs = { features = ["docs"] }

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = "src"

[tool.pyright]
exclude = ["docs", "PhenoMeters_proteometer.egg-info"]
include = ["src/proteometer"]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnnecessaryCast = "error"
reportUnnecessaryTypeIgnoreComment = "error"
reportUnknownMemberType = "none"
pythonVersion = "3.10"
